# clotaire

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.specs/: architecture.md  project-structure.md
archive/v1/: README.md
archive/v1/kloter/: __init__.py  cli.py  pipeline.py
archive/v1/kloter/models/: __init__.py  loader.py
archive/v1/kloter/steps/: diarize.py  match.py
archive/v1/scripts/: download_models.py
archive/v1/tests/: conftest.py  test_align.py  test_format.py  test_loader.py
scripts/: benchmark.py
src/clotaire/: __init__.py  __main__.py  cli.py  run.py  step_01_convert.py  step_02_transcribe.py  step_03_align.py  step_04_diarize.py
src/kloter/: __init__.py  __main__.py  cli.py  pipeline.py  run.py  step_01_convert.py  step_02_transcribe.py  step_02_vad.py  steps_io.py
src/kloter/steps/: __init__.py  align.py  convert.py  format.py  match.py  vad.py  whisper.py
tests/: conftest.py  test_align.py  test_convert.py  test_format.py  test_loader.py  test_match.py  test_step_01_convert.py  test_step_02_transcribe.py  test_step_03_align.py  test_step_04_diarize.py  test_steps_io.py
